infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-manager
  labels:
    app.kubernetes.io/part-of: cloud-manager
    app.kubernetes.io/managed-by: kubectl
